tests/ui/higher-ranked/trait-bounds/hrtb-higher-ranker-supertraits-transitive.stderr
error: implementation of `Bar` is not general enough
  --> $DIR/hrtb-higher-ranker-supertraits-transitive.rs:47:5
   |
LL |     want_bar_for_any_ccx(b);
   |     ^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Bar` is not general enough
   |
   = note: `B` must implement `Bar<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `Bar<'static>`

error: aborting due to 1 previous error

